[site] Fix vertical alignment of header between pages
Caused by `_reset.scss` setting `h1` margins to `0` which we undo for
the documentation page. The logo is a `<h1>` so gets a `margin: 0` on
the landing page, and the default margin elsewhere.

--- a/site/landing/assets/scss/_main-header.scss
+++ b/site/landing/assets/scss/_main-header.scss
@@ -43,6 +43,7 @@
   width: 12.5em;
   max-height: 2.375em;
   min-width: 12.5em;
+  margin: 0;
   order: 1;
   flex-grow: 1;
   flex-basis: calc((40em - 100%) * 999);
